crud de Persona

--- a/interfaces_ui/PaginaPersona.ui
+++ b/interfaces_ui/PaginaPersona.ui
@@ -514,6 +514,9 @@ QPushButton:hover {
           <property name="mouseTracking">
            <bool>true</bool>
           </property>
+          <property name="layoutDirection">
+           <enum>Qt::LayoutDirection::LeftToRight</enum>
+          </property>
           <property name="styleSheet">
            <string notr="true">QTableWidget {
     background-color: white; /* Celeste */
@@ -536,6 +539,9 @@ QHeaderView::section {
           <property name="frameShadow">
            <enum>QFrame::Shadow::Sunken</enum>
           </property>
+          <property name="sizeAdjustPolicy">
+           <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContentsOnFirstShow</enum>
+          </property>
           <property name="editTriggers">
            <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
           </property>
@@ -549,10 +555,13 @@ QHeaderView::section {
            <bool>true</bool>
           </property>
           <property name="selectionMode">
-           <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
+           <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+           <enum>QAbstractItemView::SelectionBehavior::SelectColumns</enum>
+          </property>
+          <property name="textElideMode">
+           <enum>Qt::TextElideMode::ElideNone</enum>
           </property>
           <property name="verticalScrollMode">
            <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
