--- a/src/UI/css/login.css
+++ b/src/UI/css/login.css
@@ -21,6 +21,7 @@
     background-color:transparent;
     font-size:15px;border:none;
     border-bottom:1px solid #000000;
+    color: #000000; /* Hace el texto ingresado negro */
 }
 #frameLogin QPushButton{
     border-radius:10px;
