--- a/src/UI/AdministraPersona/css/adminPersona.css
+++ b/src/UI/AdministraPersona/css/adminPersona.css
@@ -43,14 +43,14 @@ QTableWidget {
     background-color: #AAAAAA;
     border-radius:10px;
     border:1px solid #000000;
+    font: 50 10pt "Arial";
 }
 
 QTableWidget::item {
     background-color: #FFFFFF; 
-    font: 50 10pt "Cooper Black";
 }
  QTableWidget::item:alternate {
-        background-color: #e6f2ff; /* Color de las filas alternadas */
+        background-color: #d0d0d0;
 }
 
 QTableWidget::item:selected {
@@ -65,16 +65,30 @@ QHeaderView::section {
     border-left:1px solid #FFFFFF;
 }
 
-QHeaderView::section{
-    border-radius:0px;
-}
-
 QHeaderView::section:first {
     border-top-left-radius: 10px;
 }
 
 QHeaderView::section:last {
     border-top-right-radius: 10px;
+}
+
+QTableWidget #btneliminar{
+    background-color:#ff5151;
+    color:white;  
+}
+QTableWidget #btneliminar::hover{
+    background-color:#ff0000;
+    color:white;  
+}
+
+QTableWidget #btneditar{
+    background-color:#00b800;
+    color:white;
+}
+QTableWidget #btneditar::hover{
+    background-color:#00a800;
+    color:white;
 }
 
 QScrollBar:vertical {
