--- a/src/UI/AdministrarPermisosRol/css/form.css
+++ b/src/UI/AdministrarPermisosRol/css/form.css
@@ -8,7 +8,9 @@
     border: 1px solid #007286;
     border-radius: 10px;
 }
-
+#form QCheckBox{
+    font: 1 10pt "Arial";
+}
 #form #titulo{
     background-color: transparent;
     font: 10 20pt "Cooper Black";
