--- a/src/UI/AdministraPersona/css/adminPersona.css
+++ b/src/UI/AdministraPersona/css/adminPersona.css
@@ -46,7 +46,8 @@ QTableWidget {
 }
 
 QTableWidget::item {
-    background-color: #FFFFFF; 
+    background-color: #FFFFFF;
+    color: #000000; 
 }
  QTableWidget::item:alternate {
         background-color: #d0d0d0;
