--- a/src/UI/css/claro/ventanaPrincipal.css
+++ b/src/UI/css/claro/ventanaPrincipal.css
@@ -14,7 +14,7 @@
 }
 #frameEnca #iconoUser{
     background-color:transparent;
-    border: 2px solid #000000;
+    /* border: 2px solid #000000; */
     border-radius: 25px;
 }
 
