--- a/src/UI/css/claro/sidebar.css
+++ b/src/UI/css/claro/sidebar.css
@@ -8,6 +8,7 @@
     border-radius:10px;
     color: #000000; /* Asegura que el texto del encabezado esté en negro */
     font: 100 12pt "Cooper Black";
+    text-align: left;
 }
 
 #sidebarWidget QPushButton::Hover{
