--- a/src/UI/css/claro/formEm.css
+++ b/src/UI/css/claro/formEm.css
@@ -1,8 +1,9 @@
 #form{
     background-color: #ffffff;
 }
-#form QWidget{
-    background-color: transparent;
+#form #contenedor{
+    background-color: #eeeeee;
+    border-radius: 5px;
 }
 #form QPushButton{
     background-color: #00b9da;
@@ -58,10 +59,10 @@
     font: 1 8pt "Arial";
     color: #ba0000; /* Texto en negro para el título */
 }
-#form  #lbltituloP{
+#form  #lbltitulo{
     background-color: transparent;
     color: black;
-    font: 1000 20pt "Cooper Black";
+    font: 1000 25pt "Cooper Black";
 }
 #form  #lblsubtitulos{
     background-color: transparent;
@@ -71,4 +72,28 @@
 #form #foto{
     border-radius:0%;
     border-color: #000000;
+}QScrollArea {
+    background: transparent; /* Fondo transparente del área de scroll */
+    border: none; /* Sin bordes */
+}
+
+QScrollArea > QWidget {
+    background: transparent; /* Asegura que el contenido también sea transparente */
+}
+
+QScrollBar:vertical, QScrollBar:horizontal {
+    background: transparent; /* Fondo transparente del scroll */
+    border: none; /* Sin bordes en el scroll */
+    width: 10px; /* Ajusta el ancho de la barra (vertical) */
+    height: 10px; /* Ajusta el alto de la barra (horizontal) */
+}
+
+QScrollBar::handle {
+    background: #00bcd4; /* Color del "control deslizante" */
+    border-radius: 5px; /* Esquinas redondeadas */
+}
+
+QScrollBar::add-line, QScrollBar::sub-line {
+    background: none; /* Sin botones adicionales */
+    border: none;
 }
