--- a/src/UI/css/claro/admin.css
+++ b/src/UI/css/claro/admin.css
@@ -98,43 +98,11 @@ QTableWidget #btneditar::hover{
     color:white;
 }
 
-QScrollBar:vertical {
-    border: none;
-    background: #f0f0f0; /* Color de fondo de la barra */
-    width: 15px; /* Ancho de la barra */
-    margin: 22px 0 22px 0; /* Margen para centrar la barra */
+QTableWidget #btnInfo{
+    background-color:#d2e100;
+    color:white;
 }
-
-QScrollBar::handle:vertical {
-    background: #126398; /* Color del "handle" (parte que se mueve) */
-    min-height: 20px; /* Altura mínima del "handle" */
+QTableWidget #btnInfo::hover{
+    background-color:#a89700;
+    color:white;
 }
-
-QScrollBar::add-line:vertical, 
-QScrollBar::sub-line:vertical {
-    background: none; /* Sin fondo para las flechas */
-}
-
-QScrollBar::up-arrow:vertical, 
-QScrollBar::down-arrow:vertical {
-    background: none; /* Sin flechas */
-}
-
-QScrollBar::handle:vertical:hover {
-    background: #115d7b; /* Color del "handle" al pasar el mouse */
-}
-
-/* Estilo para la barra de desplazamiento horizontal */
-QScrollBar:horizontal {
-    border: none;
-    background: #D4D4D4; /* Color de fondo de la barra horizontal */
-    height: 16px; /* Altura de la barra horizontal */
-    margin: 0 22px 0 22px; /* Margen para centrar la barra horizontal */
-    border-radius:2px
-}
-
-QScrollBar::handle:hover {
-    background: #115d7b; /* Color del "handle" horizontal al pasar el mouse */
-}
-
-
