--- a/src/UI/css/claro/formEm.css
+++ b/src/UI/css/claro/formEm.css
@@ -136,6 +136,7 @@ QScrollArea > QWidget {
 #form #btnregistrar::hover{
     background-color:#00627d;
 }
+
 #form #select_foto{
     background-color: #d5d5d5;
     border-radius: 5px;
@@ -150,5 +151,40 @@ QScrollArea > QWidget {
     background-color: #00a5cf;
     color:#FFFFFF;
 }
+
+
+
+#form #nuevo_usuario[crear="true"]{
+    background-color: #7fdec2;
+    border-radius: 5px;
+    color:#000000;
+    font: 10 13pt "Cooper Black";
+}
+
+#form #nuevo_usuario[crear="true"]::hover{
+    background-color:#00a473;
+    color: #ffffff;
+}
+
+#form #nuevo_usuario[crear="true"]::Pressed{
+    background-color: #00a5cf;
+    color:#FFFFFF;
+}
+
+#form #nuevo_usuario[crear="false"]{
+    background-color: #ff8888;
+    border-radius: 5px;
+    color:#000000;
+    font: 10 13pt "Cooper Black";
+}
+#form #nuevo_usuario[crear="false"]::hover{
+    background-color:#ff5555;
+}
+
+#form #nuevo_usuario[crear="false"]::Pressed{
+    background-color: #bb0000;
+    color:#FFFFFF;
+}
+
 
 
