--- a/src/UI/css/claro/informacionEm.css
+++ b/src/UI/css/claro/informacionEm.css
@@ -12,44 +12,49 @@ QGroupBox {
     font-weight: bold;
     color: #333;
 }
+#lbltitulo{
+    background-color: transparent;
+    font: 10 20pt "Cooper Black";
+}
 QGroupBox::title {
     left: 10px;
     padding: 0 3px;
-    font: 10 13pt "Cooper Black";
+    font: 15pt "Cooper Black";
 }
 QWidget{
     background-color: #ffffff;
 }
 QLabel{
     background-color: transparent;
-    font: 10 10pt "Cooper Black";
+    font: 10 13pt "Cooper Black";
     color: #000000; /* Texto en negro para el título */
 }
+QLineEdit{
+    border: none;
+}
 QLineEdit:read-only{
-    background-color: #f3f3f3;
-    border-bottom:1px solid #000000;
-    padding: 5px;
+    background-color: #ffffff;
     color: #000000;
-    font: 1 10pt "Arial";
+    font: 1 11pt "Arial";
+}
+#foto{
+    border: 2px solid #ccc; border-radius: 5px;
 }
 /* QLineEdit:read-only {
     background-color: #e9e9e9;
     color: #777;
 } */
-QPushButton {
-    background-color: #0078d7;
-    color: white;
-    border: none;
-    border-radius: 3px;
-    padding: 8px 16px;
-    font-size: 13px;
+ 
+QPushButton{
+    background-color: #409da1;
+    border-radius: 5px;
+    color:#ffffff;
+    font: 10 13pt "Cooper Black";
 }
-QPushButton:hover {
-    background-color: #005bb5;
+QPushButton:hover{
+    background-color:#00627d;
 }
+
 QPushButton:pressed {
     background-color: #004080;
-}
-QScrollArea {
-    border: none;
 }
