--- a/src/UI/css/claro/form.css
+++ b/src/UI/css/claro/form.css
@@ -181,3 +181,55 @@
     background-color: #00a5cf;
     color:#FFFFFF;
 }
+
+QComboBox{
+    background-color:transparent;
+    font-size:15px;
+    border:none;
+    border-bottom:1px solid #000000;
+    color: #000000; 
+}
+QComboBox QAbstractItemView {
+    color: #000000;
+    border: none;
+    border-left: 2px solid #325fc6;
+    border-right: 2px solid #325fc6;
+    background-color: #ffffff;
+}
+
+QComboBox QAbstractItemView::item:hover {
+    color: #000000;
+    border: none;
+    border-left: 4px solid #325fc6;
+    border-right: 4px solid #325fc6;
+    background-color: #dddddd;
+}
+
+QTreeView{
+    background-color: #ffffff;
+}
+
+/* Estilo para el encabezado del QTreeView */
+QHeaderView::section {
+    background-color: #4cacaf; /* Color de fondo */
+    color: white; /* Color del texto */
+    font: 1 12pt "Cooper Black";
+    padding: 5px; /* Espaciado interno */
+    border: none; /* Borde */
+}
+
+/* Estilo para las ramas del QTreeView */
+QTreeView::item {
+    color: #000000; /* Color del texto */
+    background-color: #F1F1F1; /* Color de fondo */
+    padding: 5px; /* Espaciado interno */
+    border: 1px solid #DDD; /* Borde */
+}
+#btneliminar{
+    background-color:#ff5151;
+    color:white;  
+}
+#btneliminar::hover{
+    background-color:rgb(255, 0, 0);
+    color:rgb(0, 0, 0);  
+}
