--- a/src/UI/css/claro/formReporte.css
+++ b/src/UI/css/claro/formReporte.css
@@ -15,9 +15,47 @@ QGroupBox {
     color: #000000;
     font: 1 11pt "Arial";
 }
+
 QLabel{
     font: 1 10pt "Cooper Black";
     color:#000000;
+}
+
+QLineEdit{
+    background-color:transparent;
+    font-size:15px;
+    border:none;
+    border-bottom:2px solid #000000;
+    color: #000000; /* Texto en negro para campos de entrada */
+}
+QDateEdit{
+    background-color:transparent;
+    font-size:15px;
+    border:none;
+    border-bottom:1px solid #000000;
+    color: #000000;
+}
+QComboBox{
+    background-color:transparent;
+    font-size:15px;
+    border:none;
+    border-bottom:1px solid #000000;
+    color: #000000; 
+}
+QComboBox QAbstractItemView {
+    color: #000000;
+    border: none;
+    border-left: 2px solid #325fc6;
+    border-right: 2px solid #325fc6;
+    background-color: #ffffff;
+}
+
+QComboBox QAbstractItemView::item:hover {
+    color: #000000;
+    border: none;
+    border-left: 4px solid #325fc6;
+    border-right: 4px solid #325fc6;
+    background-color: #dddddd;
 }
 
 QCheckBox{
